overflow fix, some image styling for slide finish

--- a/src/components/SlideTypes/FinishCard.scss
+++ b/src/components/SlideTypes/FinishCard.scss
@@ -21,11 +21,11 @@
     &__container {
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        // justify-content: space-around;
+        margin-top: 5rem;
         align-items: center;
         width: 100%;
         max-width: 1020px;
-        padding: 10rem 0;
         animation: frame-appear 1s;
         
     }
@@ -33,7 +33,29 @@
     &__image {
         min-height: 300px;
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 1rem;
+
+        &--el {
+            width: 50%;
+            object-fit: contain;
+            padding-bottom: 1rem;
+
+        }
     }
+
+    &__caption {
+        color: $off-white;
+        text-transform: uppercase;
+        opacity: 0.7;
+        background-color: $light-black;
+        padding: 1rem 2rem;
+        border-radius: 4px;
+    }
+    
 
     &__message {
         color: $off-white;
